# po8klasie-fastapi

./: .gitignore  Dockerfile  README.md  cli.py  db.Dockerfile  docker-compose.local.yml  entrypoint.dev.sh  entrypoint.sh  pyproject.toml  requirements.in  requirements.txt  run.py
app/: config.py  main.py  models.py  router.py  sentry.py
app/api/: api.py  api_router.py  api_utils.py  school.py  search.py
app/app_info/: router.py
app/cli/: cli.py
app/data_patches/: apply_data_patches.py
app/data_providers/: providers.py
app/db/: db.py  db_utils.py  session.py
app/facility/: models.py  patches.py  router.py  schemas.py
app/institution/: models.py  patches.py  router.py  schemas.py
app/institution_classes/: models.py
app/jobs/: add_gdynia_api_data_to_records.py  create_facility_records.py
app/lib/: testing_utils.py
app/models/: facility.py
app/project/: add_project_records.py  models.py  router.py
app/projects/: add_project_records.py  models.py  projects.py
app/public_transport_info/: model_mapper.py  models.py  schemas.py
app/road_accident/: models.py
app/rspo_institution/: fetch.py  model_mapper.py  models.py  rspo_institution_types.py
cli/: cli.py  cli_logger.py
data/institution_classes/: warszawa_classes.csv
data/sewik/: accidents.csv
data_assets/rspo_api/: gdynia_branzowe_I_stopnia_2022-01-23_14:53:37.json  gdynia_licea_ogolnoksztalcace_2022-01-23_14:53:36.json  gdynia_technika_2022-01-23_14:53:37.json  warszawa_bednarska_2022-01-23_14:53:36.json  (+4 more)
db/: base.py  db.py  db_regeneration_utils.py  db_utils.py  models.py  session.py
jobs/: add_gdynia_api_data_to_records.py  add_institution_classes.py  add_public_transport_data_to_records.py  add_road_accident_records.py  apply_data_patches.py  create_facility_records.py  create_institution_records.py
(+86 files in other folders)
