[tool.poetry]
name = "po8klasie_fastapi"
version = "0.1.0"
description = ""
authors = ["Michał Oręziak <micorix.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.0"
pydantic = "^1.10.6"
SQLAlchemy = "^1.4.29"
psycopg2-binary = "^2.9.5"
requests = "^2.28.2"
openpyxl = "^3.1.1"
overpy = "^0.6"
geopy = "^2.3.0"
geojson = "2.5.0"
shapely = "^2.0.1"
GeoAlchemy2 = "^0.13.1"
click = "^8.1.3"
sentry-sdk = "^1.16.0"
uvicorn = {extras = ["standard"], version = "^0.21.0"}
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.11.4"}

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
pyright = "^1.1.298"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
